# bikesharing

./: README.md
bikesharing/: MANIFEST.in  README.md  Testing and Packaging Instructions.txt  config.yml  mypy.in  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
bikesharing/bikeshare_model/: __init__.py  pipeline.py  predict.py  train_pipeline.py
bikesharing/bikeshare_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bikesharing/config/: __init__.py  core.py
bikesharing/datasets/: __init__.py
bikesharing/processing/: __init__.py  data_manager.py  features.py  validation.py
bikesharing/tests/: __init__.py  conftest.py  test_features.py  test_predictions.py
bikesharing/trained_models/: __init__.py
