[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
pythonpath = [
    ".",  # adds root directory to Python path
    "config",
    "processing"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "pytest.*",
    "matplotlib.*",
    "seaborn.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 90
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 90